# Handwriting-Model

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  parameters.yaml  pyproject.toml  requirements.txt
notebooks/: data_exploration.ipynb
scripts/: extract_data_files.py
src/: __init__.py  batchifier.py  constants.py  dataset.py  loss.py  model.py  modules.py  optimizer.py  tester.py  trainer.py  utils.py
src/handwriting_generator/: __init__.py  config.py  constants.py  dataset.py  loss.py  main.py  model.py  modules.py  tester.py  trainer.py  utils.py
